// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI regression — output structure snapshots > \`mneme --help\` snapshot 1`] = `
"mneme v2.23.0 — μνήμη — memory layer + truth + drift co-pilot

  5 verbs cover 95% of needs:
    mneme verify-self --score  >  Trust gate (one number 0-100). Run first.
    mneme ask <question>  >  Memory + truth Q&A over the repo.
    mneme route <intent>  >  Natural language -> top-3 commands (any language).
    mneme earthquake drift  >  Silent-vendor-drift detector.
    mneme stillness gate  >  Decide whether AI should respond.

  Discover more (incremental cost):
    mneme atlas  >  [  ~<SIZE>]  Composed view of TASTE + BLOOM + HOT + TAGS.
    mneme bloom  >  [ ~<SIZE>]  Bloom-filter probe membership in O(1).
    mneme tags --tag <n>  >  [  ~<SIZE>]  Commands grouped by capability (trust/drift/silence/handoff/...).
    mneme hot  >  [ ~<SIZE>]  Top-20 verbs by recent pheromone-weighted use.
    mneme route <intent>  >  [  ~<SIZE>]  Natural language router (no LLM).
    mneme --help --full  >  [ ~<SIZE>]  Legacy 300+ command wall. Scripts piping --help should use this.

  Safety + ethics (Consent Fabric v2.21.6+):
    mneme rights  >  [  ~<SIZE>]  Agent Bill of Rights (10 articles).
    mneme audit-pulse  >  [ ~<SIZE>]  Audit any text for manipulation patterns.
    mneme telemetry list  >  [  ~<SIZE>]  What Mneme records (opt-IN by default).
    mneme upgrade-doctor  >  [ ~<SIZE>]  Is auto-upgrade safe right now?

  Tip: legacy 300+ command wall is now opt-in:
    mneme --help --full  >  (scripts that pipe --help should switch)
    mneme --help --naked  >  (strip decoration; raw output for CI)

  // help cost: ~381 tokens (vs ~14000 for the legacy --help --full wall, 2.7% the size)
"
`;

exports[`CLI regression — output structure snapshots > \`mneme advanced\` snapshot 1`] = `
"
  μνήμη  >  ·  Mneme — advanced commands
  ─────────────────────────────────────────────────────────────

  Phase 2 — semantic similarity
    entities  >  parse + embed every TS/JS/Python/Go symbol
    clones [--threshold]  >  surface near-duplicate functions

  Phase 3 — incident correlation
    correlate --source ...  >  join commits with incidents (pager / manual)
    blast <commit>  >  predict incidents likely to follow a commit
    palimpsest <file>:<line>  >  walk the causal chain of a single line
    conscience [files...]  >  risk-score a PR against history

  Wisdom Mutant Engine (Phase 4)
    feedback <id> up|down  >  record explicit feedback on a query
    calibrate  >  re-tune search knobs against feedback set

  Insights — the killer commands
    who-knows <topic>  >  verdict on who knows X (% confidence + backup + risk)
    decisions  >  auto-extract ADRs from commit messages
    stack-trace [--from F]  >  paste an error, get historical context per frame
    story <topic>  >  narrate the evolution of <topic> across acts
    dream  >  speculative ideas grounded in your patterns
    chat  >  multi-turn REPL over your repo's history

  Innovations (Sprint 4) — wisdom + world-class + uniqueness
    regret  >  commits shipped + immediately fixed/reverted (regret rate)
    bus-factor  >  files where one author owns ≥75% — fragility map
    paradox  >  architectural flip-flops (A → B → A patterns)
    commit-coach [--stdin]  >  pre-commit review: message + reviewers + warnings
    crystal-ball [--stdin]  >  predict CI/follow-up failure probability for staged diff

  Quant (Sprint 5) — Wall Street meets Git
    drawdown  >  worst losing streaks (firefighting periods)
    alpha --items F  >  Kelly-criterion allocation for technical debt
    backtest --samples F  >  validate any predictor against history
    black-swan  >  rare-but-catastrophic file patterns
    insider-trading  >  authors who fix bugs they introduced
    moneyball  >  undervalued contributors (high ROI, low LOC)
    greek  >  codebase Greeks (Δ Γ Θ) sensitivity
    correlation-matrix  >  hidden behavioral coupling between files
    implied-volatility  >  chaos predicted from commit message tone
    tax-loss-harvest  >  dead-code deletion candidates

  WILD — opinionated extras
    heal [--dry-run]  >  synthesize WHY notes for poor commit messages
    echo [--id|--query]  >  find past incidents resembling current
    runaway  >  files growing silently across many commits
    mirror  >  onboarding dossier (5 PRs, 3 people, 2 incidents)
    rumor  >  tribal phrases mentioned but never documented
    fossil  >  files deleted from HEAD but alive in history
    ledger --since ...  >  tamper-evident audit log (SOX/SOC2)
    adapt  >  mutant detector — recommend next 1-3 commands
    teach <target>  >  explain a folder/file in plain language
    genius <question>  >  multi-step LLM agent over Mneme commands

  Brand
    wisdom [-n <1..13>]  >  a meditation from the Mneme manifesto
    manifesto  >  the full canon

  Each command has its own --help with options and examples.
  Full design notes: WILD_IDEAS.md, ROADMAP.md.
"
`;

exports[`CLI regression — output structure snapshots > \`mneme ask --help\` snapshot 1`] = `
"Usage: mneme ask [options] <question...>

Ask the memory: "why does payment.ts use try/catch?"

Options:
  -k, --top-k <n>  >  number of results (default: 8)
  --json  >  machine-readable JSON output (default: false)
  --no-llm  >  skip LLM synthesis — extractive answer only
  --debug  >  show intent classification + raw scores (default:
                         false)
  --audit  >  refuse to answer below confidence floor or with
                         unverified citations (default: false)
  --audit-floor <level>  >  audit confidence floor: low | medium | high (default:
                         "medium")
  --stream  >  v0.23: emit speculative-reasoning events in real-time
                         (consider/accept/prune/verify) (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme do --help\` snapshot 1`] = `
"Usage: mneme do [options] <query...>

Smart dispatcher — describe what you want, Mneme picks tools and runs them ('do
find security issues' / 'do is the codebase healthy')

Options:
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme forensics anomaly --help\` snapshot 1`] = `
"Usage: mneme forensics anomaly [options]

Catch suspicious commits before merge (insider-threat / credential-compromise)

Options:
  --threshold <n>  >  deviation threshold to surface (0..4) (default: 0.9)
  --top <n>  >  show N findings (default: 10)
  --json  >  structured output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme guardian --help\` snapshot 1`] = `
"Usage: mneme guardian [options]

24/7 self-healing engine — diagnose weaknesses + auto-fix safe actions

Options:
  --watch  >  run forever, polling every --interval seconds (default:
                        false)
  --once  >  run a single pass and exit (default if --watch is
                        absent) (default: false)
  --interval <seconds>  >  poll interval in seconds (--watch only) (default: 300)
  --apply  >  actually apply auto-policy actions (otherwise
                        observe-only) (default: false)
  --max-iterations <n>  >  stop after N ticks (testing / cron-style)
  --json  >  structured JSON output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme htc-stats --help\` snapshot 1`] = `
"Usage: mneme htc-stats [options]

Inspect HTC coverage + compression ratio (raw vs cached tokens)

Options:
  --json  >  machine-readable output (default: false)
  -h, --help  >  display help for command
"
`;

exports[`CLI regression — output structure snapshots > \`mneme status\` structure (sections only) 1`] = `
"  ◉  Mneme Status
  ◆ Repo
  ◆ Memory
  ◆ Config"
`;

exports[`CLI regression — output structure snapshots > \`mneme wisdom -n 1\` snapshot 1`] = `
"
  ╭───────────────────────────────────────────╮
  │  meditation 1 of 13                                │
  ╰───────────────────────────────────────────╯

  On Memory and Intelligence

  An intelligence without memory is just guessing in a loop. The
  Greeks knew this — they made μνήμη the mother of the muses, not
  their student.
  Every AI assistant you use today is a Mnemosyne with amnesia.

  — Intelligence is the spark; memory is the fuel.

  see also:  >  mneme wisdom --all     ·     mneme wisdom -n <1..13>     ·     mneme manifesto
"
`;

exports[`CLI regression — output structure snapshots > unknown-command error snapshot 1`] = `
"✗ error: unknown command 'nope-not-real'
"
`;
